--- a/style.css
+++ b/style.css
@@ -1,4 +1,6 @@
 body {
+  margin: 0;
+  padding: 0;
   font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
 }
 
@@ -13,12 +15,13 @@ body {
 }
 
 .lang-button {
+  background-color: transparent;
   color: #fff;
   border-radius: 4px;
-  padding: 7px 20px 8px;
+  padding: 3px 15px 3px;
   white-space: nowrap;
   transition: 0.4s ease-out;
-  font-size: 14pt;
+  font-size: 12pt;
   display: inline-block;
   border: 2px solid #ffc451;
   text-decoration: none;
@@ -26,7 +29,18 @@ body {
 }
 
 
-.lang-button:hover {
+.lang-button:hover,
+.lang-button option {
   background: #ffbb38;
   color: #343a40;
+}
+
+.lang-button:focus-visible {
+  outline: none;
+}
+
+select.lang-button {
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
 }
